--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div id="user-list"></div>
         <div id="chat-messages"></div>
         <div id="message-input-container">
+            <input type="file" id="image-input" accept="image/*">
             <input type="text" id="message-input" placeholder="Type a message...">
             <button id="send-button">Send</button>
         </div>
